gateway-api/path-based-routing/path-based-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: path-based-http-route
spec:
  parentRefs:
    - name: gateway-api-path-based
      sectionName: http
    - name: gateway-api-path-based
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /frontend
      backendRefs:
        - name: frontend-deployment-path-based
          port: 5678

    - matches:
        - path:
            type: PathPrefix
            value: /backend
      backendRefs:
        - name: backend-deployment-path-based
          port: 5678
